minor bug fix and changing options menu button to always be visible

--- a/src/style.css
+++ b/src/style.css
@@ -28,12 +28,19 @@ h1 {
 /*Folders*/
 #expand {
     position: absolute;
-    top: 55px;
+    top: 12px;
     left: 5px;
     border: none;
     border-radius: 2px;
     font-size: 1.3rem;
     z-index: 10;
+}
+
+#menu {
+    aspect-ratio: 1;
+    width: 20px;
+    position: relative; 
+    top: 2px;
 }
 
 #side-bar {
@@ -256,10 +263,6 @@ label {
         width: 200px;
     }
 
-    #expand {
-        display: none;
-    }
-
     h2 {
         display: flex;
         margin: 5px;
@@ -292,6 +295,7 @@ label {
         padding-top: 10px;
         margin-left: 35px;
     }
+    
     #content {
         position: absolute;
         top: 45px;
